@@ -81,6 +81,11 @@ class Templar:
         # tell Cheetah not to blow up if it can't find a symbol for something
         raw_data = "#errorCatcher Echo\n" + raw_data
 
+        table_copy = search_table.copy()
+        search_table.update({
+           "template_universe" : table_copy
+        })
+
         # now do full templating scan, where we will also templatify the snippet insertions
         t = Template(source=raw_data, errorCatcher="Echo", searchList=[search_table])
         try:
